<resources>
    <string name="app_name">Popular Movies</string>
    <!--Menu titles-->
    <string name="main_title">Movies</string>
    <string name="details_title">Movie Name</string>
    <string name="sortby">Sort by:</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>

    <!--Movie details strings-->
    <string name="image_description">Movie poster</string>
    <string name="movie_title">Title:</string>
    <string name="release_date">Release date:</string>
    <string name="rating">Rating:</string>
    <string name="synopsis">Synopsis:</string>
    <string name="no_network">No internet connection!</string>
    <string name="reload_button">Reload</string>
    <string name="close_button">Close</string>
    <string name="trailers">Trailers:</string>
    <string name="reviews">Reviews:</string>
    <string name="review_title">Title</string>
    <string name="review_description">Description</string>
    <string name="favorites">Favorites</string>
</resources>
