<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FavoriteDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            android:layout_marginBottom="@dimen/padding">

            <ImageView
                android:id="@+id/movie_poster_details"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginTop="@dimen/padding"
                android:contentDescription="@string/image_description"
                android:scaleType="fitXY"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:layout_toEndOf="@id/movie_poster_details"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginBottom="@dimen/paddingLarge"
                android:text="@string/movie_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv_title"
                android:layout_marginTop="@dimen/padding"
                android:layout_marginBottom="@dimen/paddingLarge"
                android:maxLines="2"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="16sp"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/tv_date_of_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/movie_poster_details"
                android:layout_below="@+id/tv_title"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginBottom="@dimen/paddingLarge"
                android:text="@string/release_date"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/padding"/>

            <TextView
                android:id="@+id/movie_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv_date_of_release"
                android:layout_below="@id/tv_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="@dimen/padding"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginBottom="@dimen/paddingLarge"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/tv_user_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/movie_poster_details"
                android:layout_below="@id/tv_date_of_release"
                android:layout_marginStart="@dimen/padding"
                android:text="@string/rating"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/padding"/>

            <TextView
                android:id="@+id/movie_user_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv_user_rating"
                android:layout_below="@id/tv_date_of_release"
                android:layout_marginStart="@dimen/margin_small"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/padding"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tv_synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_poster_details"
                android:layout_marginStart="@dimen/paddingLarge"
                android:text="@string/synopsis"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/paddingLarge" />

            <TextView
                android:id="@+id/movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_synopsis"
                android:layout_margin="@dimen/padding"
                android:layout_marginStart="@dimen/paddingLarge"
                android:textAlignment="textStart"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="16sp"/>

        </RelativeLayout>
    </LinearLayout>


</ScrollView>